# snakemake-executor-plugin-aws-basic-batch

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
examples/simple-workflow/: .dockerignore  Dockerfile  README.md  Snakefile  justfile  pyproject.toml
examples/terraform/: README.md
examples/terraform/coordinator/: .terraform.lock.hcl  main.tf  terraform.tfvars.example
examples/terraform/simple-workflow/: main.tf  terraform.tfvars.example
src/snakemake_executor_plugin_aws_basic_batch/: __init__.py  batch_client.py
tests/: test_plugin.py
